Added FX for USD prices